--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,16 +24,20 @@ body {
   h4 {
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, sans-serif;
-    
     color: #5B5959 }
   h5 {
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, sans-serif;
-    color: rgb(27, 27, 27); }
+    color: rgb(11, 94, 30) ; }
+  h6 {
+    font-family: Helvetica, Geneva, Arial,
+          SunSans-Regular, sans-serif;
+    color:  #5B5959 ; }
   p {
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, sans-serif;
-    color: rgb(27, 27, 27); }
+    color: #5B5959;
+    margin-bottom:50px }
   ul.navbar li {
     background: white;
     margin: 0.5em 0;
@@ -44,10 +48,14 @@ body {
   a:link {
     color:  #5B5959;
     font-size:10px;
-    font-weight: bold}
+    font-weight: bold;}
   a:visited {
     color: #5B5959 }
   address {
     margin-top: 1em;
     padding-top: 1em;
     border-top: thin dotted }
+  table {
+    border-collapse: separate;
+    color: #5B5959
+  }
