--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
  
 <head>
-    <title>Python Flask Bucket List App</title>
- 
- 
+    <title>Breast Cancer Detector</title>
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css', v=0.01) }}">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./static/css/lazo.png">
 </head>
  
 <body>
