--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,4 +58,9 @@ body {
 
   table, th, td {
     border: 1px solid #5B5959;
+    text-align: center;
+    color:  #5B5959;
+    width: 10px;
+    height: 50px;
   }
+
