--- a/templates/image_diagnosis.html
+++ b/templates/image_diagnosis.html
@@ -17,17 +17,17 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Diagnóstico Histopatológico</h3>
+            <h4 class="text-muted">Diagnóstico histopatológico</h4>
         </div>
-  <table style="width:100%">
+  <table style="width:20%">
         <tr>
-          <th>{{ pred }}</th>
+          <th bgcolor="#42BA70">{{ pred['Diagnóstico histopatológico']}}</th>
         </tr>
-        <tr>
-          <td>Invasive Ductal Carcinoma (IDC), el subtipo más común de cáncer de mama. </td>
-        </tr>
-      </table> 
-    
+      </table>
+      <h6>El Carcinoma Ductal Invasivo (CDI) es el subtipo más frecuente <br />
+        de tumor de mama. BCD trabaja con imágenes histopatológicas de  <br />
+        tejido tumoral escaneadas a 40x para detectar ICD.</h6> 
+      <img src="./static/css/hisstop.png">
     </body>
 
     </html>
