--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,10 +57,74 @@ body {
     border-top: thin dotted }
 
   table, th, td {
-    border: 1px solid #5B5959;
+    border: 0.5px solid #5B5959;
     text-align: center;
-    color:  #5B5959;
+    color:  rgb(255, 251, 251);
     width: 10px;
     height: 50px;
+    border-radius: 10px 10px 10px 10px;
   }
+
+
+  .inputfile {
+
+    width: 0.1px;
+
+    height: 0.1px;
+
+    opacity: 0;
+
+    overflow: hidden;
+
+    position: absolute;
+
+    z-index: -1;
+
+}
+
+.inputfile + label {
+
+  border-radius: 10px;
+
+  background-color: rgba(117, 185, 68, 0.452);
+
+  color: white;
+
+  text-align: center;
+
+  transition: all 0.2s;
+
+  cursor: pointer;  
+
+  padding: 10px 20px; 
+
+  font-size: 0.8em; 
+
+  position: static;
+
+}
+
+.inputfile:focus + label,
+
+.inputfile + label:hover {
+
+  background-color: #42BA70;
+
+}
+
+.inputfile + label {
+
+    cursor: pointer; /* "hand" cursor */
+
+}
+
+.inputfile:focus + label {
+
+    outline: 1px dotted #000;
+
+    outline: -webkit-focus-ring-color auto 5px;
+
+}
+
+
 
